--- a/src/Weahter.html
+++ b/src/Weahter.html
@@ -11,7 +11,7 @@
     }
   </style>
 </head>
-<body class="h-screen bg-cover bg-center relative" style="background-image: url('../image/city/seoul.jpg');">
+<body class="h-screen bg-cover bg-center relative" id="body">
   <div class="absolute inset-0 bg-overlay"></div>
   <div class="relative z-10 container mx-auto p-4 text-white">
     <h1 class="text-4xl font-bold mb-6 text-center">Weather App</h1>
@@ -29,16 +29,17 @@
     </div>
 
     <div id="current-weather" class="bg-white bg-opacity-75 p-6 rounded-lg shadow-md mb-6">
-      <h3 class="text-xl font-bold mb-4 text-black">2024년 7월 22일 월요일</h3>
+      <h3 class="text-xl font-bold mb-4 text-black"><!-- 날짜 --></h3>
       <div class="flex items-center text-black">
         <div class="flex-1">
-          <h4 class="text-2xl font-bold mb-2">서울</h4>
-          <p class="text-xl mb-2">26°C</p>
-          <p>강수확률: 24%</p>
-          <p>습도: 90%</p>
-          <p>풍속: 3m/s</p>
+          <h4 class="text-2xl font-bold mb-2"><!-- 도시 --></h4>
+          <p class="text-xl mb-2"><!-- 기온 --></p>
+          <p><!-- 강수확률 --></p>
+          <p><!-- 습도 --></p>
+          <p><!-- 풍속 --></p>
+          <p><!-- 날씨 상태 --></p>
         </div>
-        <img src="../image/weather/umbrella-solid.svg" alt="Weather Icon" width="50px" class="ml-4"/>
+        <img id="weather-icon" src="" alt="Weather Icon" width="50px" class="ml-4"/>
       </div>
     </div>
 
