--- a/src/Weahter.html
+++ b/src/Weahter.html
@@ -14,10 +14,10 @@
 <body class="h-screen bg-cover bg-center relative" id="body">
   <div class="absolute inset-0 bg-overlay"></div>
   <div class="relative z-10 container mx-auto p-4 text-white">
-    <h1 class="text-4xl font-bold mb-6 text-center">Weather App</h1>
+    <h1 class="text-3xl md:text-4xl font-bold mb-6 text-center">Weather App</h1>
 
     <div class="mb-6 text-center">
-      <select name="city-select" id="city-select" class="p-2 border border-gray-300 rounded-lg text-black">
+      <select name="city-select" id="city-select" class="text-xs md:text-base p-2 border border-gray-300 rounded-lg text-black">
         <option value="seoul">서울</option>
         <option value="tokyo">도쿄</option>
         <option value="new york">뉴욕</option>
@@ -25,7 +25,7 @@
         <option value="moscow">모스크바</option>
         <option value="sydney">시드니</option>
       </select>
-      <button id="getWeatherBtn" class="bg-blue-500 text-white p-2 rounded-lg ml-2">Get Weather</button>
+      <button id="getWeatherBtn" class="text-xs md:text-base bg-blue-500 text-white p-2 rounded-lg ml-2">Get Weather</button>
     </div>
 
     <div id="current-weather" class="bg-white bg-opacity-75 p-6 rounded-lg shadow-md mb-6">
@@ -43,7 +43,7 @@
       </div>
     </div>
 
-    <div id="weekly-weather" class="bg-white bg-opacity-75 p-6 rounded-lg shadow-md">
+    <div id="weather-forecast" class="bg-white bg-opacity-75 p-6 rounded-lg shadow-md">
       <h3 class="text-xl font-bold mb-4 text-black">일주일간 날씨 예보</h3>
       <div id="forecast" class="grid grid-cols-1 md:grid-cols-3 gap-4"></div>
     </div>
