--- a/src/Weahter.html
+++ b/src/Weahter.html
@@ -20,10 +20,14 @@
       <select name="city-select" id="city-select" class="text-xs md:text-base p-2 border border-gray-300 rounded-lg text-black">
         <option value="seoul">서울</option>
         <option value="tokyo">도쿄</option>
-        <option value="new york">뉴욕</option>
+        <option value="dubai">두바이</option>
+        <option value="jakarta">자카르타</option>
+        <option value="los angeles">로스앤젤레스</option>
+        <option value="toronto">토론토</option>
+        <option value="rome">로마</option>
         <option value="paris">파리</option>
         <option value="moscow">모스크바</option>
-        <option value="sydney">시드니</option>
+        <option value="cape town">케이프타운</option>
       </select>
       <button id="getWeatherBtn" class="text-xs md:text-base bg-blue-500 text-white p-2 rounded-lg ml-2">Get Weather</button>
     </div>
@@ -44,7 +48,7 @@
     </div>
 
     <div id="weather-forecast" class="bg-white bg-opacity-75 p-6 rounded-lg shadow-md">
-      <h3 class="text-xl font-bold mb-4 text-black">일주일간 날씨 예보</h3>
+      <h3 class="text-xl font-bold mb-4 text-black">5일간 날씨 예보</h3>
       <div id="forecast" class="grid grid-cols-1 md:grid-cols-3 gap-4"></div>
     </div>
   </div>
